<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- 일요일 토글 버튼 -->
    <ToggleButton
        android:id="@+id/toggle_sunday"
        style="@style/Base.Foorrng.ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_weekday_selector"
        android:checked="false"
        android:textColor="@color/color_weekday_sunday"
        android:textOff="@string/all_sunday_one"
        android:textOn="@string/all_sunday_one"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@id/toggle_monday"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 월요일 토글 버튼 -->
    <ToggleButton
        android:id="@+id/toggle_monday"
        style="@style/Base.Foorrng.ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_weekday_selector"
        android:checked="false"
        android:textColor="@color/color_weekday_normal"
        android:textOff="@string/all_monday_one"
        android:textOn="@string/all_monday_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@id/toggle_tuesday"
        app:layout_constraintStart_toEndOf="@id/toggle_sunday"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 화요일 토글 버튼 -->
    <ToggleButton
        android:id="@+id/toggle_tuesday"
        style="@style/Base.Foorrng.ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_weekday_selector"
        android:checked="false"
        android:textColor="@color/color_weekday_normal"
        android:textOff="@string/all_tuesday_one"
        android:textOn="@string/all_tuesday_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@id/toggle_wednesday"
        app:layout_constraintStart_toEndOf="@id/toggle_monday"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 수요일 토글 버튼 -->
    <ToggleButton
        android:id="@+id/toggle_wednesday"
        style="@style/Base.Foorrng.ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_weekday_selector"
        android:checked="false"
        android:textColor="@color/color_weekday_normal"
        android:textOff="@string/all_wednesday_one"
        android:textOn="@string/all_wednesday_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@id/toggle_thursday"
        app:layout_constraintStart_toEndOf="@id/toggle_tuesday"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 목요일 토글 버튼 -->
    <ToggleButton
        android:id="@+id/toggle_thursday"
        style="@style/Base.Foorrng.ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_weekday_selector"
        android:checked="false"
        android:textColor="@color/color_weekday_normal"
        android:textOff="@string/all_thursday_one"
        android:textOn="@string/all_thursday_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@id/toggle_friday"
        app:layout_constraintStart_toEndOf="@id/toggle_wednesday"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 금요일 토글 버튼 -->
    <ToggleButton
        android:id="@+id/toggle_friday"
        style="@style/Base.Foorrng.ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_weekday_selector"
        android:checked="false"
        android:textColor="@color/color_weekday_normal"
        android:textOff="@string/all_friday_one"
        android:textOn="@string/all_friday_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@id/toggle_saturday"
        app:layout_constraintStart_toEndOf="@id/toggle_thursday"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 토요일 토글 버튼 -->
    <ToggleButton
        android:id="@+id/toggle_saturday"
        style="@style/Base.Foorrng.ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_weekday_selector"
        android:checked="false"
        android:textColor="@color/color_weekday_saturday"
        android:textOff="@string/all_saturday_one"
        android:textOn="@string/all_saturday_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/toggle_friday"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
