<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:paddingTop="10dp"
    tools:context=".foodtruck.menu.MenuEditFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_menu_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/stroke_gray"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@android:color/transparent">

        <ImageView
            android:id="@+id/iv_menu_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.card.MaterialCardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_change_image"
        style="@style/Foorrng.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/foodtruck_menu_change_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_menu_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_menu_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_change_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_menu_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/foodtruck_menu_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_menu_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_menu_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_menu_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/foodtruck_menu_price"
            android:inputType="number"
            android:maxLength="9" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        style="@style/Foorrng.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/foodtruck_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>